--- a/package.json
+++ b/package.json
@@ -4,8 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node server/server.js",
+    "setup": "npm install && cd client && npm install",
+    "client": "cd client && npm run start",
+    "build": "cd client && npm run build",
     "server": "nodemon server/server.js",
+    "dev": "concurrently --kill-others-on-fail \"npm run server\" \"npm run client\"",
+    "dev:server": "cd client && npm run build && cd .. && npm start",
+    "start": "node server/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -17,6 +22,7 @@
     "express": "^4.17.1",
     "flat-cache": "^2.0.1",
     "moment": "^2.24.0",
+    "nodemon": "^2.0.2",
     "recompose": "^0.30.0"
   },
   "devDependencies": {
